trunk/Archive2/b3/e4ec97b5215b7b/output
main.cpp:7:5: error: stray '\342' in program
     return !x ? 1 : x * factorial(x – 1);
     ^
main.cpp:7:5: error: stray '\200' in program
main.cpp:7:5: error: stray '\223' in program
main.cpp: In function 'int main()':
main.cpp:5:25: error: expected primary-expression before '>' token
     for (int i = 50; i <>
                         ^
main.cpp:6:1: error: expected primary-expression before 'int'
 int factorial(int x) {
 ^
main.cpp:6:1: error: expected ';' before 'int'
main.cpp:6:1: error: expected primary-expression before 'int'
main.cpp:6:1: error: expected ')' before 'int'
main.cpp:6:22: error: a function-definition is not allowed here before '{' token
 int factorial(int x) {
                      ^
main.cpp:10:1: error: a function-definition is not allowed here before '{' token
 {
 ^
main.cpp:4:9: warning: unused variable 'sum' [-Wunused-variable]
     int sum = 0;
         ^
main.cpp:13:1: error: expected '}' at end of input
 } 
 ^
